cmake_minimum_required(VERSION 3.20)
project(leetcode)

set(CMAKE_CXX_STANDARD 14 -O2)

add_executable(leetcode main.cpp "n44(dp).h" n102.h n103.h n104.h n107.h n108.h "n109(fast and slow pointer).h" n110.h n111.h n112.h n113.h n114.h n116.h n117.h n118.h n119.h n120.h n121.h n122.h n123.h n124.h n129.h n130.h n134.h "n135(greedy, todo).h" n136.h n137.h n143.h n144.h n145.h n147.h n148.h n150.h "n152.h" n153.h n154.h n155.h n162.h n164.h n167.h n172.h n173.h n174.h n188.h n189.h n190.h n191.h n198.h n199.h n200.h n201.h n203.h "n204(todo).h" n206.h n207.h n209.h n210.h "n211(todo, Trie).h" n213.h n221.h "n233(todo).h" n241.h "n279(todo, dp).h" n300.h n309.h)

