cmake_minimum_required(VERSION 3.20)
project(leetcode)

set(CMAKE_CXX_STANDARD 14 -O2)

add_executable(leetcode main.cpp "n211(Trie).h" n213.h n221.h "n233(todo).h" n241.h "n279(todo, dp).h" n300.h n309.h n313.h n322.h "n329(todo,dfs).h" n337.h n338.h n343.h n354.h n357.h n368.h n376.h n377.h n392.h n215.h n316.h n216.h n222.h n223.h n227.h n235.h n238.h)

