cmake_minimum_required(VERSION 3.20)
project(leetcode)

set(CMAKE_CXX_STANDARD 14 -O2)

add_executable(leetcode main.cpp "n211(Trie).h" n213.h n221.h "n233(todo).h" n241.h "n279(todo, dp).h" n300.h n309.h n313.h n322.h "n329(todo,dfs).h" n337.h n338.h n343.h n354.h n357.h n368.h n376.h n377.h n392.h n215.h n316.h n236.h n240.h n394.h n406.h n437.h n494.h n283.h n297.h n312.h n560.h n647.h n234.h n226.h)

